Added early access to RECORD and VARIANT Candid types. Serializes and deserializes to Map type proto type. This will require to add more JUnit tests. Future direction will be add mapping from this proto type to complex Java objects (POJO, JSON, DOM..). Also fixed Status object to make it compatible with 0.8.2 version.